--- a/src/css/story/jordan.styl
+++ b/src/css/story/jordan.styl
@@ -4,7 +4,7 @@
   width 100%
   z-index 999
   height 100vh
-  margin-bottom 10rem
+  margin-bottom 15rem
 
   .content-wrapper
     width 100%
@@ -16,18 +16,9 @@
       max-width 960px
       margin -4rem auto 1rem auto
       width 100%
-      height 10vh
       padding 0 1rem
       display flex
       flex-direction column
-      +mq('bp-2')
-        height 20vh
-      +mq('bp-3')
-        height 30vh
-      +mq('bp-4')
-        height 40vh
-      +mq('bp-5')
-        height 50vh
 
       .shoe-wrapper
         display inline-block
