--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -7,9 +7,8 @@ body
 		position absolute
 		width 100%
 		z-index 1
-		height 100vh
 		overflow hidden
-		height calc(100vh + 10rem)
+		height calc(100vh + 15rem)
 
 		.skewed-bg
 			background-color darken(#4729fc, 3)
